# YldamAgent

./: pyproject.toml  requirements.txt
account/: admin.py  models.py  serializers.py  urls.py  views.py
account/migrations/: 0001_initial.py
main/: settings.py  urls.py
