[tool.poetry]
name = "yldamagent"
version = "0.1.0"
description = ""
authors = ["Narashi Kuga <orenvady@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
djangorestframework = "^3.14.0"
pillow = "^10.0.1"
django-cors-headers = "^4.2.0"
djangorestframework-simplejwt = "^5.3.0"
django-rest-knox = "^4.2.0"
django-filter = "^23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
